# llm-api-pipeline

./: .env.example  Makefile  README.md  config.py  pyproject.toml  res.json  result.json  review.csv
docs/: task.md
src/: config.py  main.py  utils.py
