[project]
name = "llm-api-pipeline"
version = "0.1.0"
description = "Lab: API Pipeline: Data → LLM → Result"
readme = "README.md"
requires-python = ">=3.13"
dependencies = ["openai>=2.36.0", "python-dotenv>=1.2.2"]

[dependency-groups]
dev = ["mypy>=1.19.1", "ruff>=0.15.12"]

[tool.mypy]
strict = true
strict_bytes = true
local_partial_types = true
warn_unreachable = true
explicit_package_bases = true
mypy_path = ["src"]
python_version = "3.13"

[tool.ruff]
line-length = 88
target-version = "py313"

[tool.ruff.lint]
preview = true
select = ["ALL"]
ignore = [
    "TD002",  # автор в todo
    "TD003",  # ссылка на issue в todo
    "CPY001", # лицензия в начале файла
    "D100",   # docstring для модуля
    "D104",   # docstring для пакета
    "D203",   # пустая строки перед docstring класса, конфликт с D211
    "D212",   # summary на первой строке, конфликт с D213
    "FIX002", # наличие TODO
    "COM812", # конфликт с formatter
]
